IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/7/07: In Etomo - PEET, allowed the root name to be changed when importing a
.prm file.

6/7/07: In Etomo - PEET, allowed nonsuported parameters in the .prm file.

6/6/07: IMOD_3-10-10
6/6/07: Fixed miscentering in Zap window after doing a drag draw, and after
deleting points, by setting current point coordinates correctly.

6/6/07: In Etomo - PEET, added "Change Model" button to the Volume Table.

6/5/07: In Etomo - PEET, added flgWedgeWeight to the interface ("Use tilt range
in alignment").

6/5/07: In Etomo - PEET, fixed a bug which prevented the "New PEET" menu item
from being enabled correctly.

6/4/07: In Etomo - PEET, added "Copy Parameters" button, which allows the reuse
of a preferred set of parameters.

6/4/07: Attaching to a model point in Slicer now rotates points for analysis
so that it will pick points only within 0.5 pixel of the current plane.

5/31/07: In Etomo - PEET, fixed a problem creating the .epe file when importing
a .prm file or duplicating a project.

5/31/07: Added options to Mtffilter so that it provides the same set of 
filter shapes as Enhance does, and can be used in place of Enhance.

5/31/07: Added a time toolbar to Slicer identical to the one in the Zap window,
and added an angle-saving toolbar that appears when the Slicer Angles dialog 
is opened and has some of the controls that were in the Slicer Angle dialog.

5/29/07: Improved error reporting for load averages.  Added a "Restart Load"
button which causes Etomo to restart any failed load averages.

5/29/07: The Zap info button now reports a trimvol command for excising the 
selected area of the current slice that takes account of whether the data are
loaded in flipped and is easily extensible to multiple slices.

5/29/07: Slicer has a new mode in which the center point is not tied to the
current image/model point and the mouse now pans the image; there is a toolbar