@@ -1,9 +1,13 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/7/07: Added Ctrl-Shift-D hot key to delete a surface, and added an option
+to Object-Type window to get a new contour automatically on each new section 
+when modeling with open contours.
+
 6/7/07: In Etomo - PEET, allowed the root name to be changed when importing a
 .prm file.
 
-6/7/07: In Etomo - PEET, allowed nonsuported parameters in the .prm file.
+6/7/07: In Etomo - PEET, allowed nonsupported parameters in the .prm file.
 
 6/6/07: IMOD_3-10-10
 6/6/07: Fixed miscentering in Zap window after doing a drag draw, and after
